@@ -5,11 +5,13 @@ import io.agrest.EntityUpdate;
 import io.agrest.RootResourceEntity;
 import io.agrest.access.CreateAuthorizer;
 import io.agrest.access.DeleteAuthorizer;
+import io.agrest.access.PathChecker;
 import io.agrest.access.ReadFilter;
 import io.agrest.access.UpdateAuthorizer;
-import io.agrest.pojo.model.P1;
+import io.agrest.junit.pojo.P1;
 import io.agrest.reader.DataReader;
 import io.agrest.resolver.RootDataResolver;
+import io.agrest.runtime.meta.RequestSchema;
 import io.agrest.runtime.processor.select.SelectContext;
 import org.apache.cayenne.di.Injector;
 import org.junit.jupiter.api.Test;
@@ -27,12 +29,12 @@ import static org.mockito.Mockito.mock;
 public class AgEntityOverlayTest {
 
     @Test
-    public void testResolve_attribute() {
+    public void resolve_attribute() {
         RootDataResolver<P1> r1 = mock(RootDataResolver.class);
 
         AgEntity<P1> e = new DefaultEntity<>(
-                "p1", P1.class,
-                Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap(),
+                "p1", P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 r1,
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -43,7 +45,7 @@ public class AgEntityOverlayTest {
         AgEntityOverlay<P1> attributeOverlay = AgEntity.overlay(P1.class)
                 .attribute("a1", String.class, P1::getName);
 
-        AgEntity<P1> eo = attributeOverlay.resolve(mock(AgSchema.class), e);
+        AgEntity<P1> eo = attributeOverlay.resolve(mock(AgSchema.class), e, e.getSubEntities());
         assertEquals("p1", eo.getName());
         assertEquals(P1.class, eo.getType());
         assertEquals(r1, eo.getDataResolver());
@@ -51,12 +53,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_attribute_throwingFunction() {
+    public void resolve_attribute_throwingFunction() {
         RootDataResolver<P1> r1 = mock(RootDataResolver.class);
 
         AgEntity<P1> e = new DefaultEntity<>(
-                "p1", P1.class,
-                Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap(),
+                "p1", P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 r1,
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -72,19 +74,19 @@ public class AgEntityOverlayTest {
                 .overlay(P1.class)
                 .attribute("a1", String.class, throwing);
 
-        AgEntity<P1> eo = attributeOverlay.resolve(mock(AgSchema.class), e);
+        AgEntity<P1> eo = attributeOverlay.resolve(mock(AgSchema.class), e, e.getSubEntities());
         DataReader reader = eo.getAttribute("a1").getDataReader();
         assertThrows(RuntimeException.class, () -> reader.read(new P1()));
     }
 
     @Test
-    public void testResolve_RootResolver() {
+    public void resolve_RootResolver() {
         RootDataResolver<P1> r1 = mock(RootDataResolver.class);
         RootDataResolver<P1> r2 = mock(RootDataResolver.class);
 
         AgEntity<P1> e = new DefaultEntity<>(
-                "p1", P1.class,
-                Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap(),
+                "p1", P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 r1,
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -95,19 +97,19 @@ public class AgEntityOverlayTest {
         AgEntityOverlay<P1> resolverOnly = AgEntity.overlay(P1.class)
                 .dataResolver(r2);
 
-        AgEntity<P1> eo = resolverOnly.resolve(mock(AgSchema.class), e);
+        AgEntity<P1> eo = resolverOnly.resolve(mock(AgSchema.class), e, e.getSubEntities());
         assertEquals("p1", eo.getName());
         assertEquals(P1.class, eo.getType());
         assertEquals(r2, eo.getDataResolver());
     }
 
     @Test
-    public void testResolve_RootResolverFunction() {
+    public void resolve_RootResolverFunction() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(), Collections.emptyMap(), Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -118,27 +120,28 @@ public class AgEntityOverlayTest {
         List<P1> p1s = asList(new P1(), new P1());
 
         AgEntityOverlay<P1> resolverOnly = AgEntity.overlay(P1.class).dataResolver(c -> p1s);
-        AgEntity<P1> eo = resolverOnly.resolve(mock(AgSchema.class), e);
+        AgEntity<P1> eo = resolverOnly.resolve(mock(AgSchema.class), e, e.getSubEntities());
 
         SelectContext<P1> context = new SelectContext<>(
                 P1.class,
+                new RequestSchema(mock(AgSchema.class)),
                 mock(AgRequestBuilder.class),
+                PathChecker.ofDefault(),
                 mock(Injector.class));
-        context.setEntity(new RootResourceEntity<>(mock(AgEntity.class)));
+
+        context.setEntity(new RootResourceEntity<>(eo));
         eo.getDataResolver().fetchData(context);
 
         assertSame(p1s, context.getEntity().getData());
     }
 
     @Test
-    public void testResolve_readFilter() {
+    public void resolve_readFilter() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -148,7 +151,7 @@ public class AgEntityOverlayTest {
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).readFilter(p1 -> p1.getName().startsWith("a"));
 
-        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e).getReadFilter();
+        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getReadFilter();
         P1 p11 = new P1();
         p11.setName("x");
         P1 p12 = new P1();
@@ -159,14 +162,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_readFilter_Additivity() {
+    public void resolve_readFilter_Additivity() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 p1 -> p1.getName().startsWith("a"),
                 CreateAuthorizer.allowsAllFilter(),
@@ -176,7 +177,7 @@ public class AgEntityOverlayTest {
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).readFilter(p1 -> p1.getName().endsWith("a"));
 
-        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e).getReadFilter();
+        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getReadFilter();
         P1 p11 = new P1();
         p11.setName("ax");
 
@@ -192,14 +193,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_readFilter_IgnoreOverlaid() {
+    public void resolve_readFilter_IgnoreOverlaid() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 p1 -> p1.getName().startsWith("a"),
                 CreateAuthorizer.allowsAllFilter(),
@@ -211,7 +210,7 @@ public class AgEntityOverlayTest {
                 .ignoreOverlaidReadFilter()
                 .readFilter(p1 -> p1.getName().endsWith("a"));
 
-        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e).getReadFilter();
+        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getReadFilter();
         P1 p11 = new P1();
         p11.setName("ax");
 
@@ -227,14 +226,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_readFilter_IgnoreOverlaid_NoOverlayFilter() {
+    public void resolve_readFilter_IgnoreOverlaid_NoOverlayFilter() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 p1 -> p1.getName().startsWith("a"),
                 CreateAuthorizer.allowsAllFilter(),
@@ -244,7 +241,7 @@ public class AgEntityOverlayTest {
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).ignoreOverlaidReadFilter();
 
-        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e).getReadFilter();
+        ReadFilter<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getReadFilter();
         P1 p11 = new P1();
         p11.setName("ax");
 
@@ -260,14 +257,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_createAuthorizer() {
+    public void resolve_createAuthorizer() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -275,46 +270,44 @@ public class AgEntityOverlayTest {
                 DeleteAuthorizer.allowsAllFilter()
         );
 
-        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).createAuthorizer(u -> ((String) u.getValues().get("name")).startsWith("a"));
-        CreateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getCreateAuthorizer();
+        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).createAuthorizer(u -> ((String) u.getAttributes().get("name")).startsWith("a"));
+        CreateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getCreateAuthorizer();
 
         EntityUpdate<P1> p11 = new EntityUpdate<>(mock(AgEntity.class));
-        p11.getValues().put("name", "x");
+        p11.setAttribute("name", "x");
 
         EntityUpdate<P1> p12 = new EntityUpdate<>(mock(AgEntity.class));
-        p12.getValues().put("name", "a");
+        p12.setAttribute("name", "a");
 
         assertFalse(f.isAllowed(p11));
         assertTrue(f.isAllowed(p12));
     }
 
     @Test
-    public void testResolve_createAuthorizer_Additivity() {
+    public void resolve_createAuthorizer_Additivity() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
-                u -> ((String) u.getValues().get("name")).startsWith("a"),
+                u -> ((String) u.getAttributes().get("name")).startsWith("a"),
                 UpdateAuthorizer.allowsAllFilter(),
                 DeleteAuthorizer.allowsAllFilter()
         );
 
-        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).createAuthorizer(u -> ((String) u.getValues().get("name")).endsWith("a"));
-        CreateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getCreateAuthorizer();
+        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).createAuthorizer(u -> ((String) u.getAttributes().get("name")).endsWith("a"));
+        CreateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getCreateAuthorizer();
 
         EntityUpdate<P1> p11 = new EntityUpdate<>(mock(AgEntity.class));
-        p11.getValues().put("name", "ax");
+        p11.setAttribute("name", "ax");
 
         EntityUpdate<P1> p12 = new EntityUpdate<>(mock(AgEntity.class));
-        p12.getValues().put("name", "xa");
+        p12.setAttribute("name", "xa");
 
         EntityUpdate<P1> p13 = new EntityUpdate<>(mock(AgEntity.class));
-        p13.getValues().put("name", "axa");
+        p13.setAttribute("name", "axa");
 
         assertFalse(f.isAllowed(p11));
         assertFalse(f.isAllowed(p12));
@@ -322,34 +315,32 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_createAuthorizer_IgnoreOverlaid() {
+    public void resolve_createAuthorizer_IgnoreOverlaid() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
-                u -> ((String) u.getValues().get("name")).startsWith("a"),
+                u -> ((String) u.getAttributes().get("name")).startsWith("a"),
                 UpdateAuthorizer.allowsAllFilter(),
                 DeleteAuthorizer.allowsAllFilter()
         );
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class)
-                .createAuthorizer(u -> ((String) u.getValues().get("name")).endsWith("a"))
+                .createAuthorizer(u -> ((String) u.getAttributes().get("name")).endsWith("a"))
                 .ignoreOverlaidCreateAuthorizer();
-        CreateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getCreateAuthorizer();
+        CreateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getCreateAuthorizer();
 
         EntityUpdate<P1> p11 = new EntityUpdate<>(mock(AgEntity.class));
-        p11.getValues().put("name", "ax");
+        p11.setAttribute("name", "ax");
 
         EntityUpdate<P1> p12 = new EntityUpdate<>(mock(AgEntity.class));
-        p12.getValues().put("name", "xa");
+        p12.setAttribute("name", "xa");
 
         EntityUpdate<P1> p13 = new EntityUpdate<>(mock(AgEntity.class));
-        p13.getValues().put("name", "axa");
+        p13.setAttribute("name", "axa");
 
         assertFalse(f.isAllowed(p11));
         assertTrue(f.isAllowed(p12));
@@ -357,14 +348,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_updateAuthorizer() {
+    public void resolve_updateAuthorizer() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -372,46 +361,44 @@ public class AgEntityOverlayTest {
                 DeleteAuthorizer.allowsAllFilter()
         );
 
-        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).updateAuthorizer((p1, u) -> ((String) u.getValues().get("name")).startsWith("a"));
-        UpdateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getUpdateAuthorizer();
+        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).updateAuthorizer((p1, u) -> ((String) u.getAttributes().get("name")).startsWith("a"));
+        UpdateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getUpdateAuthorizer();
 
         EntityUpdate<P1> p11 = new EntityUpdate<>(mock(AgEntity.class));
-        p11.getValues().put("name", "x");
+        p11.setAttribute("name", "x");
 
         EntityUpdate<P1> p12 = new EntityUpdate<>(mock(AgEntity.class));
-        p12.getValues().put("name", "a");
+        p12.setAttribute("name", "a");
 
         assertFalse(f.isAllowed(mock(P1.class), p11));
         assertTrue(f.isAllowed(mock(P1.class), p12));
     }
 
     @Test
-    public void testResolve_updateAuthorizer_Additivity() {
+    public void resolve_updateAuthorizer_Additivity() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
-                (p1, u) -> ((String) u.getValues().get("name")).startsWith("a"),
+                (p1, u) -> ((String) u.getAttributes().get("name")).startsWith("a"),
                 DeleteAuthorizer.allowsAllFilter()
         );
 
-        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).updateAuthorizer((p1, u) -> ((String) u.getValues().get("name")).endsWith("a"));
-        UpdateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getUpdateAuthorizer();
+        AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).updateAuthorizer((p1, u) -> ((String) u.getAttributes().get("name")).endsWith("a"));
+        UpdateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getUpdateAuthorizer();
 
         EntityUpdate<P1> p11 = new EntityUpdate<>(mock(AgEntity.class));
-        p11.getValues().put("name", "ax");
+        p11.setAttribute("name", "ax");
 
         EntityUpdate<P1> p12 = new EntityUpdate<>(mock(AgEntity.class));
-        p12.getValues().put("name", "xa");
+        p12.setAttribute("name", "xa");
 
         EntityUpdate<P1> p13 = new EntityUpdate<>(mock(AgEntity.class));
-        p13.getValues().put("name", "axa");
+        p13.setAttribute("name", "axa");
 
         assertFalse(f.isAllowed(mock(P1.class), p11));
         assertFalse(f.isAllowed(mock(P1.class), p12));
@@ -419,34 +406,32 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_updateAuthorizer_IgnoreOverlaid() {
+    public void resolve_updateAuthorizer_IgnoreOverlaid() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
-                (p1, u) -> ((String) u.getValues().get("name")).startsWith("a"),
+                (p1, u) -> ((String) u.getAttributes().get("name")).startsWith("a"),
                 DeleteAuthorizer.allowsAllFilter()
         );
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class)
                 .ignoreOverlaidUpdateAuthorizer()
-                .updateAuthorizer((p1, u) -> ((String) u.getValues().get("name")).endsWith("a"));
-        UpdateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getUpdateAuthorizer();
+                .updateAuthorizer((p1, u) -> ((String) u.getAttributes().get("name")).endsWith("a"));
+        UpdateAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getUpdateAuthorizer();
 
         EntityUpdate<P1> p11 = new EntityUpdate<>(mock(AgEntity.class));
-        p11.getValues().put("name", "ax");
+        p11.setAttribute("name", "ax");
 
         EntityUpdate<P1> p12 = new EntityUpdate<>(mock(AgEntity.class));
-        p12.getValues().put("name", "xa");
+        p12.setAttribute("name", "xa");
 
         EntityUpdate<P1> p13 = new EntityUpdate<>(mock(AgEntity.class));
-        p13.getValues().put("name", "axa");
+        p13.setAttribute("name", "axa");
 
         assertFalse(f.isAllowed(mock(P1.class), p11));
         assertTrue(f.isAllowed(mock(P1.class), p12));
@@ -454,36 +439,34 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testMergeResolve_updateAuthorizer_IgnoreOverlaid() {
+    public void mergeResolve_updateAuthorizer_IgnoreOverlaid() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
-                (p1, u) -> ((String) u.getValues().get("name")).startsWith("a"),
+                (p1, u) -> ((String) u.getAttributes().get("name")).startsWith("a"),
                 DeleteAuthorizer.allowsAllFilter()
         );
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class)
                 .ignoreOverlaidUpdateAuthorizer()
-                .updateAuthorizer((p1, u) -> ((String) u.getValues().get("name")).endsWith("a"));
+                .updateAuthorizer((p1, u) -> ((String) u.getAttributes().get("name")).endsWith("a"));
 
         AgEntityOverlay<P1> oMerged = AgEntity.overlay(P1.class).merge(o);
-        UpdateAuthorizer<P1> f = oMerged.resolve(mock(AgSchema.class), e).getUpdateAuthorizer();
+        UpdateAuthorizer<P1> f = oMerged.resolve(mock(AgSchema.class), e, e.getSubEntities()).getUpdateAuthorizer();
 
         EntityUpdate<P1> p11 = new EntityUpdate<>(mock(AgEntity.class));
-        p11.getValues().put("name", "ax");
+        p11.setAttribute("name", "ax");
 
         EntityUpdate<P1> p12 = new EntityUpdate<>(mock(AgEntity.class));
-        p12.getValues().put("name", "xa");
+        p12.setAttribute("name", "xa");
 
         EntityUpdate<P1> p13 = new EntityUpdate<>(mock(AgEntity.class));
-        p13.getValues().put("name", "axa");
+        p13.setAttribute("name", "axa");
 
         assertFalse(f.isAllowed(mock(P1.class), p11));
         assertTrue(f.isAllowed(mock(P1.class), p12));
@@ -491,14 +474,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_deleteAuthorizer() {
+    public void resolve_deleteAuthorizer() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -507,7 +488,7 @@ public class AgEntityOverlayTest {
         );
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).deleteAuthorizer(p1 -> p1.getName().startsWith("a"));
-        DeleteAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getDeleteAuthorizer();
+        DeleteAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getDeleteAuthorizer();
 
         P1 p11 = new P1();
         p11.setName("x");
@@ -519,14 +500,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_deleteAuthorizer_Additivity() {
+    public void resolve_deleteAuthorizer_Additivity() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -535,7 +514,7 @@ public class AgEntityOverlayTest {
         );
 
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class).deleteAuthorizer(p1 -> p1.getName().endsWith("a"));
-        DeleteAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getDeleteAuthorizer();
+        DeleteAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getDeleteAuthorizer();
 
         P1 p11 = new P1();
         p11.setName("ax");
@@ -552,14 +531,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_deleteAuthorizer_IgnoreOverlaid() {
+    public void resolve_deleteAuthorizer_IgnoreOverlaid() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
-                Collections.emptyMap(),
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(), Map.of(), Map.of(),
                 mock(RootDataResolver.class),
                 ReadFilter.allowsAllFilter(),
                 CreateAuthorizer.allowsAllFilter(),
@@ -570,7 +547,7 @@ public class AgEntityOverlayTest {
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class)
                 .ignoreOverlaidDeleteAuthorizer()
                 .deleteAuthorizer(p1 -> p1.getName().endsWith("a"));
-        DeleteAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e).getDeleteAuthorizer();
+        DeleteAuthorizer<P1> f = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getDeleteAuthorizer();
 
         P1 p11 = new P1();
         p11.setName("ax");
@@ -587,12 +564,12 @@ public class AgEntityOverlayTest {
     }
 
     @Test
-    public void testResolve_propFilter_MakeInaccessible() {
+    public void resolve_propFilter_MakeInaccessible() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(),
                 Map.of("name", new DefaultAttribute("name", String.class, true, true, o -> null)),
                 Collections.emptyMap(),
                 mock(RootDataResolver.class),
@@ -605,18 +582,18 @@ public class AgEntityOverlayTest {
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class)
                 .readablePropFilter(b -> b.property("name", false))
                 .writablePropFilter(b -> b.property("name", false));
-        AgAttribute a = o.resolve(mock(AgSchema.class), e).getAttribute("name");
+        AgAttribute a = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getAttribute("name");
         assertFalse(a.isReadable());
         assertFalse(a.isWritable());
     }
 
     @Test
-    public void testResolve_propFilter_MakeAccessible() {
+    public void resolve_propFilter_MakeAccessible() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
-                Collections.emptyMap(),
+                P1.class, false,
+                List.of(), Map.of(),
                 Map.of("name", new DefaultAttribute("name", String.class, false, false, o -> null)),
                 Collections.emptyMap(),
                 mock(RootDataResolver.class),
@@ -629,17 +606,18 @@ public class AgEntityOverlayTest {
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class)
                 .readablePropFilter(b -> b.property("name", true))
                 .writablePropFilter(b -> b.property("name", true));
-        AgAttribute a = o.resolve(mock(AgSchema.class), e).getAttribute("name");
+        AgAttribute a = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getAttribute("name");
         assertTrue(a.isReadable());
         assertTrue(a.isWritable());
     }
 
     @Test
-    public void testResolve_propFilter_MakeIdInAccessible() {
+    public void resolve_propFilter_MakeIdInAccessible() {
 
         AgEntity<P1> e = new DefaultEntity<>(
                 "p1",
-                P1.class,
+                P1.class, false,
+                List.of(),
                 Map.of("id1", new DefaultIdPart("id1", Integer.class, true, true, o -> "")),
                 Collections.emptyMap(),
                 Collections.emptyMap(),
@@ -653,12 +631,11 @@ public class AgEntityOverlayTest {
         AgEntityOverlay<P1> o = AgEntity.overlay(P1.class)
                 .readablePropFilter(b -> b.id(false))
                 .writablePropFilter(b -> b.id(false));
-        Collection<AgIdPart> parts = o.resolve(mock(AgSchema.class), e).getIdParts();
+        Collection<AgIdPart> parts = o.resolve(mock(AgSchema.class), e, e.getSubEntities()).getIdParts();
         assertEquals(1, parts.size());
         AgIdPart part = parts.iterator().next();
         assertEquals("id1", part.getName());
         assertFalse(part.isReadable());
         assertFalse(part.isWritable());
     }
-
 }
